# creditflow-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
agent-service/: Dockerfile  pyproject.toml  requirements.txt
agent-service/app/: main.py
agent-service/app/api/: routes.py
agent-service/app/core/: config.py  llm.py
agent-service/app/domain/: models.py
agent-service/app/graph/: builder.py  state.py
agent-service/app/graph/nodes/: _telemetry.py  credit_memo.py  extraction.py  financial_analysis.py  risk_assessment.py  verifier.py
agent-service/app/prompts/: __init__.py
agent-service/app/services/: financial.py  pdf.py  runner.py  verification.py
agent-service/tests/: test_financial.py
backend/: Dockerfile  pom.xml
backend/src/main/resources/: application.yml
docs/: api-design.md  architecture.md  database-schema.md  phase2.md  project-overview.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AgentRunsView.tsx  ExtractionView.tsx  MemoView.tsx  MetricsView.tsx  RiskView.tsx  StatusBadge.tsx  UploadPanel.tsx  VerificationView.tsx  WorkflowDetailView.tsx  WorkflowList.tsx
frontend/src/components/analytics/: AnalyticsDashboard.tsx
frontend/src/components/evaluation/: EvalDashboard.tsx  ScoreBars.tsx
frontend/src/components/review/: AuditTrail.tsx  CorrectionForm.tsx  ReviewDetailView.tsx  ReviewQueue.tsx
frontend/src/styles/: app.css
frontend/src/types/: index.ts  phase2.ts
(+74 files in other folders)
